--- a/WebContent/registragasto.xhtml
+++ b/WebContent/registragasto.xhtml
@@ -110,7 +110,7 @@
 															<p:ajax update="COTPGA, COSBGA" listener="#{GestorGastos.cambiaTipo}"/>
 													</p:selectOneMenu>
 
-													<h:outputText value="Tipo de concepto de gasto:  "/>
+													<h:outputText value="Tipo de concepto:  "/>
 													<p:selectOneMenu id="COTPGA" value="#{GestorGastos.sCOTPGA}">
 														<f:selectItem itemLabel="Tipo..." itemValue=""/>
 														<f:selectItems value="#{GestorGastos.tiposcotpgaHM}"/>
