PPv09d-b20140325-r4 -Inclusion de Gestor de pagos masivos por provision de fondos. -Correccion de errores.

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -32,6 +32,8 @@
 								url="pagosimple.xhtml" icon="ui-icon-signal-cart" />
 							<p:menuitem value="Pago Comunidad"
 								url="pagocomunidad.xhtml" icon="ui-icon-signal-cart" />
+							<p:menuitem value="Pago Provision"
+								url="pagoprovision.xhtml" icon="ui-icon-signal-cart" />
 						</p:submenu>
 
 						<p:submenu label="Provisiones">
