--- a/WebContent/listacomunidades.xhtml
+++ b/WebContent/listacomunidades.xhtml
@@ -108,7 +108,7 @@
 											<f:facet name="header">
 												<h:outputText value="Documento"/>
 											</f:facet>
-											<h:outputText value="#{comunidad.COCLDO}"/>
+											<h:outputText value="#{comunidad.DCOCLDO}"/>
 										</p:column>
 
 										<p:column>
@@ -177,7 +177,7 @@
 
 									<p:column>
 										<f:facet name="header">
-											<h:outputText value="Comunidad Autonoma"/>
+											<h:outputText value="Provincia"/>
 										</f:facet>
 										<h:outputText value="#{activo.NOPRAC}"/>
 									</p:column>
