--- a/WebContent/movimientoscomunidades.xhtml
+++ b/WebContent/movimientoscomunidades.xhtml
@@ -84,7 +84,7 @@
 											<h:outputText for="COACES" value="Código de activo: "/>
 											<p:inputText id="COACES" value="#{GestorMovimientosComunidades.sCOACES}" size="10" maxlength="9"/>
 
-											<p:commandButton value="Buscar Comunidad" update="msgs, popup, panel, NOTA,, COACES" actionListener="#{GestorMovimientosComunidades.buscarComunidad}"/>	
+											<p:commandButton value="Buscar Comunidad" update="msgs, popup, panel, NOTA, COACES" actionListener="#{GestorMovimientosComunidades.buscarComunidad}"/>	
 
 										</h:panelGrid>
 									</p:panel>
@@ -222,35 +222,63 @@
 															selection="#{GestorMovimientosComunidades.activoseleccionado}" selectionMode="single"
 															paginator="true" paginatorPosition="bottom" rows="10"
 															paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-															rowsPerPageTemplate="5,10,15">
+															rowsPerPageTemplate="5,10,15"  lazy="true" emptyMessage="Sin registros">
 
-							<p:column headerText="Código Activo">
-								#{activo.COACES}
-							</p:column>
+									<p:column>
+										<f:facet name="header">
+											<h:outputText value="Activo"/>
+										</f:facet>
+										<h:outputText value="#{activo.COACES}"/>
+									</p:column>
 
-							<p:column headerText="Provincia">
-								#{activo.NOPRAC}
-							</p:column>
+									<p:column>
+										<f:facet name="header">
+											<h:outputText value="Provincia"/>
+										</f:facet>
+										<h:outputText value="#{activo.NOPRAC}"/>
+									</p:column>
 
-							<p:column headerText="Municipio">
-								#{activo.NOMUIN}
-							</p:column>
+									<p:column>
+										<f:facet name="header">
+											<h:outputText value="Municipio"/>
+										</f:facet>
+										<h:outputText value="#{activo.NOMUIN}"/>
+									</p:column>
 
-							<p:column headerText="Vía">
-								#{activo.NOVIAS}
-							</p:column>
+									<p:column>
+										<f:facet name="header">
+											<h:outputText value="Vía"/>
+										</f:facet>
+										<h:outputText value="#{activo.NOVIAS}"/>
+									</p:column>
 
-							<p:column headerText="Portal">
-								#{activo.NUPOAC}
-							</p:column>
+									<p:column>
+										<f:facet name="header">
+											<h:outputText value="Portal"/>
+										</f:facet>
+										<h:outputText value="#{activo.NUPOAC}"/>
+									</p:column>
 
-							<p:column headerText="Piso">
-								#{activo.NUPIAC}
-							</p:column>
+									<p:column>
+										<f:facet name="header">
+											<h:outputText value="Piso"/>
+										</f:facet>
+										<h:outputText value="#{activo.NUPIAC}"/>
+									</p:column>
 
-							<p:column headerText="Puerta">
-								#{activo.NUPUAC}
-							</p:column>
+									<p:column>
+										<f:facet name="header">
+											<h:outputText value="Puerta"/>
+										</f:facet>
+										<h:outputText value="#{activo.NUPUAC}"/>
+									</p:column>
+
+									<f:facet name="footer">
+										<h:commandLink>
+											<p:graphicImage value="recursos/excel.png"/>
+											<p:dataExporter type="xls" target="activos" fileName="listaactivos" encoding="ISO-8859-15"/>
+										</h:commandLink>
+									</f:facet>
 
 						</p:dataTable>
 					</p:dialog>
