--- a/WebContent/listaprovisiones.xhtml
+++ b/WebContent/listaprovisiones.xhtml
@@ -104,7 +104,7 @@
 											<p:panel >
 												<h:panelGrid columns="4" cellpadding="5">
 													<h:outputText for="NUPROFB" value="Provisión: " />
-													<p:inputText id="NUPROFB" value="#{GestorPagosComunidad.sNUPROFB}" size="10" maxlength="9"/>
+													<p:inputText id="NUPROFB" value="#{GestorListaProvisiones.sNUPROFB}" size="10" maxlength="9"/>
 
 													<p:commandButton value="Comprobar" update="provisiones, msgs, popup" actionListener="#{GestorListaProvisiones.comprobarProvision}"/>	
 
