--- a/WebContent/registracuota.xhtml
+++ b/WebContent/registracuota.xhtml
@@ -90,23 +90,20 @@
 									<h:panelGrid columns="1" cellpadding="5">
 
 										<p:panel>
-											<h:panelGrid columns="6" cellpadding="5">
+											<h:panelGrid columns="4" cellpadding="5">
 
 												<h:outputText for="COCLDO" value="Documento: "/>
-												<p:selectOneMenu id="COCLDO" value="#{GestorCuotas.sCOCLDO}">
+												<p:selectOneMenu id="COCLDO" value="#{GestorCuotas.sCOCLDO}"  disabled="true">
 													<f:selectItem itemLabel="Elija..." itemValue=""/>
 													<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}"/>
 													<f:validateLength minimum="1"/>
 												</p:selectOneMenu>
 
 												<h:outputText for="NUDCOM" value="Número: "/>
-												<p:inputText id="NUDCOM" value="#{GestorCuotas.sNUDCOM}" size="10" maxlength="10"/>
-
-												<p:commandButton value="Cargar" update="panelComunidad, msgs, popup" actionListener="#{GestorCuotas.cargarComunidad}"/>
+												<p:inputText id="NUDCOM" value="#{GestorCuotas.sNUDCOM}" size="10" maxlength="10" disabled="true"/>
 
 											</h:panelGrid>
-									  </p:panel>
-
+										</p:panel>
 										<p:panel>
 											<h:panelGrid columns="2" cellpadding="5">
 
@@ -285,7 +282,7 @@
 						<p:fieldset legend="Criterios de Búsqueda">
 							<h:panelGrid columns="1" cellpadding="5">
 
-								<p:panel id="panelBuscar">
+								<p:panel id="panelBuscarActivos">
 									<h:panelGrid columns="2" cellpadding="5">
 
 										<h:outputText for="NOPRAC" value="Provincia: "/>
@@ -312,11 +309,20 @@
 									</h:panelGrid>
 								</p:panel>
 
+								<p:panel id="panelBuscarReferencia" >
+									<h:panelGrid columns="2" cellpadding="5">
+
+										<h:outputText for="NURCAT" value="Referencia Catastral: " />
+										<p:inputText id="NURCAT" value="#{GestorCuotas.sNURCAT}" size="22" maxlength="20"/>
+
+									</h:panelGrid>
+								</p:panel>
+
 								<p:panel>
 									<h:panelGrid columns="2" cellpadding="5">
 
 										<p:commandButton value="Buscar" update="popup, form:activos" actionListener="#{GestorCuotas.buscaActivos}" oncomplete="dlgTabla.show()"/>
-										<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorCuotas.limpiarPlantillaActivo}"/>
+										<p:commandButton value="Limpiar Plantilla" update="panelBuscarActivos, panelBuscarReferencia" actionListener="#{GestorCuotas.limpiarPlantillaActivo}"/>
 
 									</h:panelGrid>
 								</p:panel>
